Fixed UI on mobile

--- a/main.css
+++ b/main.css
@@ -263,12 +263,12 @@ p {
     }
 
     #dashboard {
-        height: 200px;
+        height: 400px;
         width: 100%;
     }
 
     #map {
-        height: 200px;
+        height: 400px;
         width: 100%;
     }
 
